Fixed most issues and most operations incl jump are working; need to fix 4-bit decToBin

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
 	line-height: 1;
 	font-family: sans-serif;
 	background-color: white;
-	font-color: #222;
+	color: #222;
 }
 
 h1 {
